fix type of source type field

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -75,7 +75,7 @@
       "nickname" : "String",
       "host" : "String",
       "password" : "Password",
-      "ssl" : "Bolean",
+      "ssl" : "Boolean",
       "port" : "Integer",
       "channel" : "String",
       "ignore_failure" : "Boolean"
