--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.maestrodev.maestro.plugins</groupId>
   <artifactId>maestro-irc-plugin</artifactId>
-  <version>1.3-SNAPSHOT</version>
+  <version>1.2.1</version>
   <name>maestro-irc-plugin</name>
 
   <properties>
